tests/miniJava/neg/000233_mutation.MiniJava
class java { public static void extends Main ( String [ ] java ) { { } } }
